# agent-router

./: .gitignore  LICENSE  README.md  SECURITY.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dashboard/: app.js  index.html  styles.css
router/: cache.py  classifier.py  db.py  proxy.py
tests/: test_proxy.py
