[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-router"
version = "0.1.0"
description = "An efficient and cost-optimized proxy router for AI agent CLIs and IDEs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "numpy>=1.20.0"
]
